--- a/Essenzastile/Essenzastile/Web.config
+++ b/Essenzastile/Essenzastile/Web.config
@@ -6,6 +6,7 @@
 <configuration>
   <appSettings>
     <add key="ConexionBD" value="Server = DESKTOP-CBU5NE1; Database = BDStore; User Id = sa;Password = 123456;" />
+    <!--<add key="ConexionBD" value="Server = sql5046.site4now.net; Database = DB_A4F54F_dd; User Id = DB_A4F54F_dd_admin;Password = bbva2019;" />-->
   <add key="Telerik.Skin" value="Bootstrap" />
   <add key="Telerik.ScriptManager.TelerikCdn" value="Enabled" />
   <add key="Telerik.StyleSheetManager.TelerikCdn" value="Enabled" />
