--- a/Essenzastile/Essenzastile/Essenzastile.csproj
+++ b/Essenzastile/Essenzastile/Essenzastile.csproj
@@ -309,6 +309,7 @@
     <Content Include="login.html" />
     <Content Include="product.html" />
     <Content Include="register.html" />
+    <Content Include="resImg\andiroba_cream.jpg" />
     <Content Include="resImg\ekospatatua.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -425,7 +426,7 @@
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
-      <UserProperties UseJQuerySupport="True" UseAjaxifiedTemplates="True" />
+      <UserProperties UseAjaxifiedTemplates="True" UseJQuerySupport="True" />
     </VisualStudio>
   </ProjectExtensions>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
